--- a/index.html
+++ b/index.html
@@ -137,7 +137,18 @@
   "Tu es la mélodie douce qui berce mon âme.",
   "Avec toi, chaque jour est une nouvelle aventure remplie d’amour.",
   "Ta présence transforme mes rêves en réalité.",
-  "Je t’aime plus que les mots ne peuvent jamais l’exprimer."
+  "Je t’aime plus que les mots ne peuvent jamais l’exprimer.",
+  // Ajout de nouvelles phrases :
+  "Quand je pense à toi, un sourire naît sans raison.",
+  "Ton absence est un silence que mon cœur ne sait pas interpréter.",
+  "Je t'aime dans chaque battement de mon cœur et dans chaque souffle que je prends.",
+  "Ton amour est mon plus grand poème, écrit sans mots mais ressenti à chaque instant.",
+  "Tu es la seule personne qui peut faire battre mon cœur juste avec un regard.",
+  "Aimer, c’est te regarder et oublier le reste du monde.",
+  "Si j’avais une rose pour chaque pensée pour toi, je pourrais marcher dans un jardin infini.",
+  "Ton amour est la lumière qui guide mes pas dans l’obscurité.",
+  "Même dans mes rêves les plus fous, je n’imaginais pas quelqu’un comme toi.",
+  "Tu es l’évidence au milieu de mes doutes, la tendresse au milieu du chaos."
 ];
 
 
