--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
 
   <h1>Pour Olorun-Foumilayo Jeannette ADEOLA 💙</h1>
-<h1 id="gtm">Jeanette, je t'aime</h1>
+<h1 id="gtm">Jeannette, je t'aime</h1>
   <p class="phrase">
     Si mon cœur était un ciel, tu serais la plus belle étoile.<br>
     Tu illumines ma vie de ta douceur et de ta lumière.
