--- a/index.html
+++ b/index.html
@@ -157,7 +157,15 @@
     <source src="https://cdn.pixabay.com/download/audio/2023/03/20/audio_15a56e8f0e.mp3?filename=romantic-story-144302.mp3" type="audio/mpeg" />
     Votre navigateur ne supporte pas l'audio.
   </audio>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-XXXXXXX');
+</script>
   <script>
     const phrases = [
   "Ton sourire me donne envie de croire en la beauté de chaque jour.",
