--- a/index.html
+++ b/index.html
@@ -199,6 +199,28 @@
 
   <script>
     const phrases = [
+      "Ton sourire me donne envie de croire en la beauté de chaque jour.",
+      "Depuis que je t’ai rencontrée, mon monde a changé de couleur.",
+      "Je ne cherche plus le bonheur, je l’ai trouvé en toi.",
+      "À chaque battement de cœur, c’est ton prénom qui résonne en moi.",
+      "Tu es ce que j’ai de plus doux, de plus vrai, de plus beau.",
+      "Ton regard est la lumière qui éclaire mes jours sombres.",
+      "Être près de toi, c’est comme retrouver la paix dans un monde agité.",
+      "Chaque moment passé avec toi est un trésor que je garde précieusement.",
+      "Tu es la mélodie douce qui berce mon âme.",
+      "Avec toi, chaque jour est une nouvelle aventure remplie d’amour.",
+      "Ta présence transforme mes rêves en réalité.",
+      "Je t’aime plus que les mots ne peuvent jamais l’exprimer.",
+      "Quand je pense à toi, un sourire naît sans raison.",
+      "Ton absence est un silence que mon cœur ne sait pas interpréter.",
+      "Je t'aime dans chaque battement de mon cœur et dans chaque souffle que je prends.",
+      "Ton amour est mon plus grand poème, écrit sans mots mais ressenti à chaque instant.",
+      "Tu es la seule personne qui peut faire battre mon cœur juste avec un regard.",
+      "Aimer, c’est te regarder et oublier le reste du monde.",
+      "Si j’avais une rose pour chaque pensée pour toi, je pourrais marcher dans un jardin infini.",
+      "Ton amour est la lumière qui guide mes pas dans l’obscurité.",
+      "Même dans mes rêves les plus fous, je n’imaginais pas quelqu’un comme toi.",
+      "Tu es l’évidence au milieu de mes doutes, la tendresse au milieu du chaos."
       "Je pense à toi plus souvent que je respire.",
       "Ton amour est mon plus beau refuge.",
       "Tu es mon aujourd’hui et tous mes lendemains.",
@@ -227,7 +249,7 @@
     }
 
     function showLoveDays() {
-      const start = new Date("2022-11-08"); // Exemple : date de début d’amour
+      const start = new Date("2020-04-18"); // Exemple : date de début d’amour
       const today = new Date();
       const diffTime = Math.abs(today - start);
       const days = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
