--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       "Si j’avais une rose pour chaque pensée pour toi, je pourrais marcher dans un jardin infini.",
       "Ton amour est la lumière qui guide mes pas dans l’obscurité.",
       "Même dans mes rêves les plus fous, je n’imaginais pas quelqu’un comme toi.",
-      "Tu es l’évidence au milieu de mes doutes, la tendresse au milieu du chaos."
+      "Tu es l’évidence au milieu de mes doutes, la tendresse au milieu du chaos.",
       "Je pense à toi plus souvent que je respire.",
       "Ton amour est mon plus beau refuge.",
       "Tu es mon aujourd’hui et tous mes lendemains.",
